# pyagrams

./: LICENSE  README.md  example.py  main.py  pyproject.toml  vector_demo.py
helpful info/: svgs and xml.md
src/pyagrams/: __init__.py  diagram.py  figure.py
src/pyagrams/axis_objects/: __init__.py  point.py  spline.py  vector.py
src/pyagrams/core/: __init__.py  geometry2d.py  geometry3d.py  primitives.py  style.py
src/pyagrams/exporters/: __init__.py  svg.py
src/pyagrams/scene/: __init__.py  axes.py  diagram.py
